update docker & middleware

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -3,6 +3,8 @@ FROM golang:1.9
 ADD . /go/src/github.com/wlwanpan/wifFee/services
 
 RUN go get github.com/gorilla/mux
+RUN go get github.com/joho/godotenv
+RUN go get googlemaps.github.io/maps
 
 RUN go install github.com/wlwanpan/wifFee/services
 
