--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -5,6 +5,7 @@ ADD . /go/src/github.com/wlwanpan/wifFee/services
 RUN go get github.com/gorilla/mux
 RUN go get github.com/joho/godotenv
 RUN go get googlemaps.github.io/maps
+RUN go get gopkg.in/mgo.v2
 
 RUN go install github.com/wlwanpan/wifFee/services
 
