--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv-webpack": "^1.5.7",
+    "google-protobuf": "^3.6.1",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
