--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   links:
     - database
   environment:
-    - DB_NAME=wif_fee_db
+    - DB_NAME=wiffee_db
 
 database:
   image: mongo:3.0
