--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "dotenv-webpack": "^1.5.7",
     "google-protobuf": "^3.6.1",
     "normalize.css": "^8.0.0",
+    "underscore": "^1.9.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.1",
