added pug and ui element

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "wifi + coffee = <3",
   "scripts": {
     "protoc": "protoc --proto_path=proto --js_out=import_style=commonjs,binary:app/src/pb proto/places.proto proto/wifi.proto && protoc -I=proto --go_out=services/pb proto/places.proto proto/wifi.proto",
-    "start": "cd app && npm run dev"
+    "app": "cd app && npm run dev",
+    "service": "cd services && gin run main.go"
   },
   "repository": {
     "type": "git",
