--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.11",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.1",
     "vuex": "^3.0.1"
