init setup for speedtest

--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,10 @@
     "axios": "^0.18.0",
     "dotenv-webpack": "^1.5.7",
     "google-protobuf": "^3.6.1",
+    "net": "^1.0.2",
     "normalize.css": "^8.0.0",
+    "speedtest-net": "^1.4.3",
+    "tls": "0.0.1",
     "underscore": "^1.9.1",
     "vue": "^2.5.11",
     "vue-material": "^1.0.0-beta-10.2",
